@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/imake
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/imake/ChangeLog,v 1.26 2007/02/04 18:11:02 joshuabaergen Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/imake/ChangeLog,v 1.27 2010/04/17 13:30:30 scarabeus Exp $
+
+*imake-1.0.3 (17 Apr 2010)
+
+  17 Apr 2010; Tomáš Chvátal <scarabeus@gentoo.org> +imake-1.0.3.ebuild:
+  Version bump.
 
   04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org> imake-1.0.2.ebuild:
   Drop mirroring restriction. Thanks to Zhang Le of bug #163088.
